# mac-game-rigger

./: .gitignore  README.md  pyproject.toml
blender_tests/: test_analyze_operator.py  test_armature_generation.py  test_automatic_weights_operator.py  test_bone_roll_operator.py  test_capsule_weights_operator.py  test_generate_armature_operator.py  test_landmark_mirror_operator.py  test_landmark_operators.py  test_landmark_validation_operator.py  test_pose_tests_operator.py  test_preview_operator.py  test_qa_report_operator.py  test_unity_fbx_export_operator.py  test_unreal_fbx_export_operator.py  test_weight_cleanup_operator.py
docs/: alpha-gap-roadmap.md  alpha-smoke-results.md  asset-evaluation-protocol.md  asset-evidence-progress.md  benchmark-scorecard.md  blender-compatibility-matrix.md  deformation-scoring-rubric.md  install-guide.md  performance-benchmarks.md  product-scope.md  production-trial-asset-source-plan.md  release-checklist.md  unity-import-verification.md  unreal-import-verification.md
samples/: README.md  asset-source-candidates.json  manifest.json  split_mesh_humanoid_candidates.json
scripts/: check_unity_batchmode_health.py  create_evidence_skeleton.py  create_split_mesh_review_packet.py  generate_asset_evidence_report.py  install_addon_dev.sh  package_addon.sh  plan_split_mesh_humanoid_intake.py  plan_unity_animator_smoke_migration.py  preflight_split_mesh_candidate.py  record_unity_import_evidence.py  register_asset_evidence.py  run_blender_compat_matrix.py  run_blender_workflow_benchmark.py  run_full_alpha_smoke.sh  validate_asset_evidence.py  (+7 more)
(+261 files in other folders)
