[project]
name = "mac-game-rigger"
version = "0.1.0"
description = "Mac-first Blender add-on for assisted game character rigging"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Kyylian" }
]

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
pythonpath = [
  "."
]

[tool.ruff]
line-length = 100
target-version = "py311"

